name:                yab
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/theNerd247/yab#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Harvey
maintainer:          noah.harvey247@gm
copyright:           GPL-v2
category:            other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    ,yaml
    ,exceptions
    ,filepath
    ,transformers
    ,containers
    ,time
    ,cassava
    ,vector
    ,bytestring
    ,scientific
    ,aeson
    ,directory
  exposed-modules:     
    Data.Budget
    ,Data.Budget.Budget
    ,Data.Budget.Entry
    ,Data.Serialization
    ,Data.Serialization.Yaml
    ,Data.Serialization.Errors
    ,Data.Serialization.Csv
    ,Yab.AccountSort
    ,YabCommon

executable yab
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
     base
    ,yab
    ,containers
    ,transformers
    ,filepath
    ,directory
    ,optparse-applicative
    ,pretty

  default-language:    Haskell2010

test-suite yab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       
     base
    ,QuickCheck
    ,yab
    ,containers
    ,time
    ,cassava
    ,hsshellscript
    ,filepath
    ,test-framework-quickcheck2
    ,test-framework
    ,bytestring
    ,vector

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theNerd247/yab
