name:                yab
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/theNerd247/yab#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Harvey
maintainer:          noah.harvey247@gm
copyright:           GPL-v2
category:            other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    ,yaml
    ,exceptions
    ,transformers
    ,containers
    ,text
    ,time
    ,mongoDB
    ,bson
    ,lens
  exposed-modules:     
    Data.Budget
    ,Data.MongoDB
    ,Data.Amount

executable yab
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
     base
    ,yab
    ,containers
    ,transformers
    ,optparse-applicative
    ,pretty
    ,mongoDB
    ,exceptions
    ,lens
    ,time
    ,text

  default-language:    Haskell2010

test-suite yab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       
     base
    ,QuickCheck
    ,yab
    ,containers
    ,time
    ,cassava
    ,hsshellscript
    ,tasty
    ,tasty-quickcheck
    ,tasty-rerun
    ,lens
    ,bytestring
    ,vector

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theNerd247/yab
